--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
+    "@types/redux-logger": "^3.0.8",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
@@ -21,6 +22,7 @@
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "typescript": "^4.1.2",
